--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
                                 <a class="nav-link" href="#project">Project</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#skills">Skills</a>
+                                <a class="nav-link" href="#education">Qualification's</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#skills">Skill's</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#contact">Contact</a>
@@ -193,9 +196,43 @@
                 </div>
             </div>
         </section>
+        <section id="education">
+            <div class="container-fluid p-lg-5">
+                <h2 class="text-center p-lg-5">Qualification's</h2>
+                <ul class="cards">
+                    <li class="cards_item">
+                        <div class="card">
+                            <div class="card_image"><img src="resources/10th - School.jpg"></div>
+                            <div class="card_content">
+                                <h2 class="card_title">Baby's English High School - 10th</h2>
+                                <p class="card_text">2010 - 2020, Pimpri - Pune<br> 82.00 %</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="cards_item">
+                        <div class="card">
+                            <div class="card_image"><img src="resources/12th - College.jpg"></div>
+                            <div class="card_content">
+                                <h2 class="card_title">Jain Hind Junior College - 12th</h2>
+                                <p class="card_text">2020 - 2022, Pimpri - Pune<br> 54.67 %</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="cards_item">
+                        <div class="card">
+                            <div class="card_image"><img src="resources/B.E - College.png"></div>
+                            <div class="card_content">
+                                <h2 class="card_title">BVCOEL - B.E</h2>
+                                <p class="card_text">2022 - 2026, Lavale - Pune<br> --- CGPA</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
         <section id="skills">
             <div class="container-fluid p-lg-5">
-                <h2 class="text-center p-lg-5">Skills</h2>
+                <h2 class="text-center p-lg-5">Skill's</h2>
                 <div class="skills">
                     <h3><span class="badge bg-secondary">HTML</span></h3>
                     <h3><span class="badge bg-secondary">JavaScript</span></h3>
