--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         </div>
                     </li>
                 </ul>
-            </div>
+            </div><br>
         </section>
         <section id="skills">
             <div class="container-fluid p-lg-5">
