--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <section id="about">
             <div class="container-fluid p-lg-5">
                 <h2 class="text-center p-5">About Me</h2>
-                <img class="about_img" src="resources/Profile Photo.jpg">
+                <img class="about_img" src="resources/Profile.jpg">
                 <h2 class="text-center p-1">Shubham Varma</h2>
-                <p class="text-center fw-bold">Frontend Web Developer</p>
+                <p class="text-center fw-bold"><u>Frontend Web Developer</u></p>
                 <p class="text-center">shubhamvarma2004@gmail.com</p>
                 <div class="container text-center p-4">
                     Hello,
