--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </section>
         <section id="project">
             <div class="container-fliud p-lg-5">
-                <div class="main p-lg-5">
+                <div class="main p-lg-5"><br>
                     <h1>Internship Projects</h1><br>
                     <ul class="cards">
                         <li class="cards_item">
@@ -197,7 +197,7 @@
             </div>
         </section>
         <section id="education">
-            <div class="container-fluid p-lg-5">
+            <div class="container-fluid p-lg-5"><br>
                 <h2 class="text-center p-lg-5">Qualification's</h2>
                 <ul class="cards">
                     <li class="cards_item">
@@ -231,8 +231,8 @@
             </div><br>
         </section>
         <section id="skills">
-            <div class="container-fluid p-lg-5">
-                <h2 class="text-center p-lg-5">Skill's</h2>
+            <div class="container-fluid p-lg-5"><br>
+                <h2 class="text-center p-lg-5">Skill's</h2><br>
                 <div class="skills">
                     <h3><span class="badge bg-secondary">HTML</span></h3>
                     <h3><span class="badge bg-secondary">JavaScript</span></h3>
