--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <h3><span class="badge bg-secondary">CSS</span></h3>
                 </div><br>
                 <div class="skills">
-                    <h3><span class="badge bg-secondary">CSS</span></h3>
+                    <h3><span class="badge bg-secondary">Entrepreneur</span></h3>
                     <h3><span class="badge bg-secondary">Canva</span></h3>
                 </div><br>
                 <div class="skills">
