--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="container-fluid home">
                 <div class="content">
                     <h1 class="animate__animated animate__bounceInLeft">Shubham Varma</h1>
-                    <h5 class="animate__animated animate__bounceInDown animate__delay-1s">@shubhamvarma2004</h5>
+                    <h5 class="animate__animated animate__bounceInDown animate__delay-1s">@shubhamcode2004</h5>
                     <p class="animate__animated animate__bounceInUp animate__delay-1s">E-Mail -
                         shubhamvarma2004@gmail.com</p>
                     <h4>
@@ -76,6 +76,9 @@
                     <a href="#project">
                         <button class="animate__animated animate__bounceInRight">PROJECTS</button>
                     </a>
+                    <br>
+                    <button class="animate__animated animate__bounceInLeft"
+                        onclick="window.open('RESUME.pdf')">RESUME</button>
                 </div>
             </div>
         </section>
