--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </a>
                     <br>
                     <button class="animate__animated animate__bounceInLeft"
-                        onclick="window.open('RESUME.pdf')">RESUME</button>
+                        onclick="window.open('Resume.pdf')">RESUME</button>
                 </div>
             </div>
         </section>
