--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="conatiner text-center p-lg-5 social">
                     <h4>Social Media's</h4><br>
-                    <a href="https://github.com/Shubham-Varma-2004" target="_blank"><img src="resources/github.svg"
+                    <a href="https://github.com/shubhamcode2004" target="_blank"><img src="resources/github.svg"
                             alt="" height="30"></a>
                     <a href="https://www.instagram.com/shubhamcode2004/" target="_blank"><img
                             src="resources/instagram.svg" alt="" height="30"></a>
@@ -127,7 +127,7 @@
                                 <div class="card_content">
                                     <h2 class="card_title">OIBSIP-Level-2-Task-1</h2>
                                     <p class="card_text">March Phase 1 OIBSIP <br> Simple Calculator with UI</p>
-                                    <a href="https://shubham-varma-2004.github.io/OIBSIP-Level-2-Task-1/"
+                                    <a href="https://shubhamcode2004.github.io/OIBSIP-Level-2-Task-1/"
                                         target="_blank"><button class="btn card_btn">Website</button></a>
                                 </div>
                             </div>
@@ -139,7 +139,7 @@
                                     <h2 class="card_title">OIBSIP-Level-2-Task-2</h2>
                                     <p class="card_text">March Phase 1 OIBSIP <br> Tribute Page for Captain Vikram Batra
                                     </p>
-                                    <a href="https://shubham-varma-2004.github.io/OIBSIP-Level-2-Task-2/"
+                                    <a href="https://shubhamcode2004.github.io/OIBSIP-Level-2-Task-2/"
                                         target="_blank"><button class="btn card_btn">Website</button></a>
                                 </div>
                             </div>
@@ -150,7 +150,7 @@
                                 <div class="card_content">
                                     <h2 class="card_title">OIBSIP-Level-2-Task-3</h2>
                                     <p class="card_text">March Phase 1 OIBSIP <br> To Do List with UI</p>
-                                    <a href="https://shubham-varma-2004.github.io/OIBSIP-Level-2-Task-3/"
+                                    <a href="https://shubhamcode2004.github.io/OIBSIP-Level-2-Task-3/"
                                         target="_blank"><button class="btn card_btn">Website</button></a>
                                 </div>
                             </div>
@@ -167,7 +167,7 @@
                                     <h2 class="card_title">TextUtils</h2>
                                     <p class="card_text">Manipulate You Text or Sentence Here ! In Less Time and Energy
                                     </p>
-                                    <a href="https://shubham-varma-2004.github.io/TextUtils/" target="_blank"><button
+                                    <a href="https://shubhamcode2004.github.io/TextUtils/" target="_blank"><button
                                             class="btn card_btn">Website</button></a>
                                 </div>
                             </div>
@@ -178,7 +178,7 @@
                                 <div class="card_content">
                                     <h2 class="card_title">Weather-App</h2>
                                     <p class="card_text">Rear Time Weather Forecasting App, Updates Every Hour.</p>
-                                    <a href="https://shubham-varma-2004.github.io/Weather-App/" target="_blank"><button
+                                    <a href="https://shubhamcode2004.github.io/Weather-App/" target="_blank"><button
                                             class="btn card_btn">Website</button></a>
                                 </div>
                             </div>
@@ -190,7 +190,7 @@
                                     <h2 class="card_title">Tinder</h2>
                                     <p class="card_text">Meet New and Interesting Peoples Nearby on new Online and
                                         Digitalize World !</p>
-                                    <a href="https://shubham-varma-2004.github.io/Tinder/" target="_blank"><button
+                                    <a href="https://shubhamcode2004.github.io/Tinder/" target="_blank"><button
                                             class="btn card_btn">Website</button></a>
                                 </div>
                             </div>
