--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             alt="" height="30"></a>
                     <a href="https://www.instagram.com/shubhamcode2004/" target="_blank"><img
                             src="resources/instagram.svg" alt="" height="30"></a>
-                    <a href="https://www.linkedin.com/in/shubham-varma-821428245/" target="_blank"><img
+                    <a href="https://www.linkedin.com/in/shubhamcode2004/" target="_blank"><img
                             src="resources/linkedin.svg" alt="" height="30"></a>
                     <a href="https://api.whatsapp.com/send?phone=917498731202&text=" target="_blank"><img
                             src="resources/whatsapp.svg" alt="" height="30"></a>
