--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
-    <link rel="shortcut icon" href="resources/LOGO.png" type="image/x-icon">
+    <link rel="shortcut icon" href="resources/Logo.png" type="image/x-icon">
     <title>Portfolio - Shubham Varma</title>
 </head>
 
@@ -103,8 +103,8 @@
                 </div>
                 <div class="conatiner text-center p-lg-5 social">
                     <h4>Social Media's</h4><br>
-                    <a href="https://github.com/shubhamcode2004" target="_blank"><img src="resources/github.svg"
-                            alt="" height="30"></a>
+                    <a href="https://github.com/shubhamcode2004" target="_blank"><img src="resources/github.svg" alt=""
+                            height="30"></a>
                     <a href="https://www.instagram.com/shubhamcode2004/" target="_blank"><img
                             src="resources/instagram.svg" alt="" height="30"></a>
                     <a href="https://www.linkedin.com/in/shubhamcode2004/" target="_blank"><img
