Building Optimized Producation Build

--- a/Personal/index.html
+++ b/Personal/index.html
@@ -27,7 +27,22 @@
         </nav>
     </header>
     <main>
-
+        <section id="link">
+            <div class="container-fluid"><br>
+                <h2 class="text-center bg-dark p-lg-5 text-light rounded-bottom-circle">RESOURCES</h2><br><br>
+                <div class="card">
+                    <div class="card-header">
+                        Magic Pattern
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Beautiful Graphics With 10+ Tools. Instantly & Effortless!</h5>
+                        <p class="card-text"></p>
+                        <a href="https://www.magicpattern.design/" target="_blank"
+                            class="btn btn-outline-success">WEBSITE </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
