--- a/Personal/index.html
+++ b/Personal/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand text-danger" href="">RESTRICTED AREA</a>
-                <a href="/index.html">
+                <a href="/">
                     <button type="button" class="btn btn-outline-danger">EXIT</button>
                 </a>
             </div>
