--- a/Personal/index.html
+++ b/Personal/index.html
@@ -29,23 +29,91 @@
     <main>
         <section id="link">
             <div class="container-fluid"><br>
-                <h2 class="text-center bg-dark p-lg-5 text-light rounded-bottom-circle">RESOURCES</h2><br><br>
-                <div class="card">
-                    <div class="card-header">
-                        Magic Pattern
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Beautiful Graphics With 10+ Tools. Instantly & Effortless!</h5>
-                        <p class="card-text"></p>
-                        <a href="https://www.magicpattern.design/" target="_blank"
-                            class="btn btn-outline-success">WEBSITE </a>
-                    </div>
+                <h3 class="text-center bg-black p-lg-5 m-lg-5 text-light rounded-5 opacity-75">RESOURCES</h3><br><br>
+                <div class="container">
+                    <div class="card">
+                        <div class="card-header">
+                            Bootstrap
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Build fast, responsive sites with Bootstrap</h5>
+                            <p class="card-text"></p>
+                            <a href="https://www.getbootstrap.com/" target="_blank"
+                                class="btn btn-outline-success">WEBSITE </a>
+                        </div>
+                    </div><br>
+                    <div class="card">
+                        <div class="card-header">
+                            Animate CSS
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Just-add-water CSS animations</h5>
+                            <p class="card-text"></p>
+                            <a href="https://animate.style/" target="_blank" class="btn btn-outline-success">WEBSITE
+                            </a>
+                        </div>
+                    </div><br>
+                    <div class="card">
+                        <div class="card-header">
+                            Magic Pattern
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Beautiful Graphics With 10+ Tools. Instantly & Effortless!</h5>
+                            <p class="card-text"></p>
+                            <a href="https://www.magicpattern.design/" target="_blank"
+                                class="btn btn-outline-success">WEBSITE </a>
+                        </div>
+                    </div><br>
+                    <div class="card">
+                        <div class="card-header">
+                            Animista
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">On-Demand CSS Animations Library</h5>
+                            <p class="card-text"></p>
+                            <a href="https://animista.net/" target="_blank" class="btn btn-outline-success">WEBSITE </a>
+                        </div>
+                    </div><br>
+                    <div class="card">
+                        <div class="card-header">
+                            CSS Gradient
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">CSS Gradient is a happy little website and free tool that lets you
+                                create a gradient background for websites.</h5>
+                            <p class="card-text"></p>
+                            <a href="https://cssgradient.io/" target="_blank" class="btn btn-outline-success">WEBSITE
+                            </a>
+                        </div>
+                    </div><br>
+                    <div class="card">
+                        <div class="card-header">
+                            CSS Layout
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Beautiful, Easy and Instant CSS Layout Generator</h5>
+                            <p class="card-text"></p>
+                            <a href="https://layout.bradwoods.io/" target="_blank"
+                                class="btn btn-outline-success">WEBSITE
+                            </a>
+                        </div>
+                    </div><br>
+                    <div class="card">
+                        <div class="card-header">
+                            Color Hunt
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Color Palettes for Designers and Artists</h5>
+                            <p class="card-text"></p>
+                            <a href="https://colorhunt.co/" target="_blank" class="btn btn-outline-success">WEBSITE </a>
+                        </div>
+                    </div><br>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-
+        <p class="text-center">Copyright© Portfolio - Shubham Varma || Since 2023 - All Rights Reserved</p>
     </footer>
 </body>
 
