--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <section id="contact">
             <div class="conatiner-fluid"><br><br>
                 <div class="container-fluid feedback p-lg-5">
-                    <form action="https://formspree.io/f/mpzervoy" method="POST" id="my-form">
+                    <form action="https://formspree.io/f/xrgvyzlz" method="POST" id="my-form">
                         <h2>Get in Touch</h2>
                         <div class="form-group">
                             <label for="firstName"> First Name</label>
