--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#about">About</a>
                             </li>
-                            <li class=" nav-item">
+                            <li class="nav-item">
                                 <a class="nav-link" href="#project">Project</a>
                             </li>
                             <li class="nav-item">
@@ -97,7 +97,9 @@
         <section id="about">
             <div class="container-fluid p-lg-5">
                 <h2 class="text-center p-5">About Me</h2>
-                <img class="about_img" src="resources/profile_image.jpg" />
+                <div class="owner">
+                    <img src="resources/profile_image.jpg" />
+                </div>
                 <h2 class="text-center p-1">Shubham Varma</h2>
                 <p class="text-center fw-bold"><u>Frontend Web Developer</u></p>
                 <p class="text-center">
@@ -135,64 +137,55 @@
         </section>
         <section id="project">
             <div class="container-fliud p-lg-5">
-                <div class="main p-lg-5">
-                    <br />
-                    <h1>Internship Projects</h1>
-                    <br />
+                <div class="main p-lg-1">
+                    <h2 class="text-center p-5">Projects</h2>
                     <ul class="cards">
                         <li class="cards_item">
                             <div class="card">
                                 <div class="card_image">
-                                    <img src="https://picsum.photos/500/300/?image=3" />
+                                    <img src="https://picsum.photos/500/300/?image=240" />
                                 </div>
                                 <div class="card_content">
-                                    <h2 class="card_title">OIBSIP-Level-2-Task-1</h2>
+                                    <h2 class="card_title">Shubham Sliding Window</h2>
                                     <p class="card_text">
-                                        March Phase 1 OIBSIP <br />
-                                        Simple Calculator with UI
+                                        Professional Sliding Window Installation Services in Pune
+                                    </p>
+                                    <a href="https://shubhamcode2004.github.io/Dream_Project/" target="_blank"><button
+                                            class="btn card_btn">Website</button></a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="cards_item">
+                            <div class="card">
+                                <div class="card_image">
+                                    <img src="https://picsum.photos/500/300/?image=24" />
+                                </div>
+                                <div class="card_content">
+                                    <h2 class="card_title">Memory-Game</h2>
+                                    <p class="card_text">
+                                        Level up your memory for free with this online memory card flip game.
+                                    </p>
+                                    <a href="https://shubhamcode2004.github.io/CC-Memory-Game/" target="_blank"><button
+                                            class="btn card_btn">Website</button></a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="cards_item">
+                            <div class="card">
+                                <div class="card_image">
+                                    <img src="https://picsum.photos/500/300/?image=456" />
+                                </div>
+                                <div class="card_content">
+                                    <h2 class="card_title">Calculator</h2>
+                                    <p class="card_text">
+                                        A simple calculator made using HTML, CSS and JavaScript.
                                     </p>
                                     <a href="https://shubhamcode2004.github.io/OIBSIP-Level-2-Task-1/"
                                         target="_blank"><button class="btn card_btn">Website</button></a>
                                 </div>
                             </div>
                         </li>
-                        <li class="cards_item">
-                            <div class="card">
-                                <div class="card_image">
-                                    <img src="https://picsum.photos/500/300/?image=14" />
-                                </div>
-                                <div class="card_content">
-                                    <h2 class="card_title">OIBSIP-Level-2-Task-2</h2>
-                                    <p class="card_text">
-                                        March Phase 1 OIBSIP <br />
-                                        Tribute Page for Captain Vikram Batra
-                                    </p>
-                                    <a href="https://shubhamcode2004.github.io/OIBSIP-Level-2-Task-2/"
-                                        target="_blank"><button class="btn card_btn">Website</button></a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="cards_item">
-                            <div class="card">
-                                <div class="card_image">
-                                    <img src="https://picsum.photos/500/300/?image=5" />
-                                </div>
-                                <div class="card_content">
-                                    <h2 class="card_title">OIBSIP-Level-2-Task-3</h2>
-                                    <p class="card_text">
-                                        March Phase 1 OIBSIP <br />
-                                        To Do List with UI
-                                    </p>
-                                    <a href="https://shubhamcode2004.github.io/OIBSIP-Level-2-Task-3/"
-                                        target="_blank"><button class="btn card_btn">Website</button></a>
-                                </div>
-                            </div>
-                        </li>
                     </ul>
-                </div>
-                <div class="main p-lg-1">
-                    <h1>Personal Projects</h1>
-                    <br />
                     <ul class="cards">
                         <li class="cards_item">
                             <div class="card">
